--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "docx>=0.2.4",
+    "pypandoc>=1.15",
+    "pypandoc-binary>=1.15",
     "python-docx>=1.2.0",
 ]
